--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,9 @@
 
         <!-- Used dependencies -->
         <dep.ammonite.version>1.0.1-6-6d2db3a</dep.ammonite.version>
+        <dep.bouncycastle.version>1.57</dep.bouncycastle.version>
         <dep.cats.version>0.9.0</dep.cats.version>
+        <dep.circe.version>0.8.0</dep.circe.version>
         <dep.eff.version>4.5.0</dep.eff.version>
         <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
         <dep.junit.version>4.12</dep.junit.version>
@@ -37,10 +39,10 @@
         <dep.multiset.version>0.4</dep.multiset.version>
         <dep.neo4j.version>3.2.0-alpha08</dep.neo4j.version>
         <dep.neo4j-driver.version>1.4.2</dep.neo4j-driver.version>
+        <dep.netty.version>4.1.8.Final</dep.netty.version>
         <dep.scalatest.version>3.0.3</dep.scalatest.version>
         <dep.sourcecode.version>0.1.2</dep.sourcecode.version>
         <dep.spark.version>2.2.0</dep.spark.version>
-        <dep.circe.version>0.8.0</dep.circe.version>
     </properties>
 
     <repositories>
@@ -428,7 +430,7 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bctls-jdk15on</artifactId>
-            <version>1.57</version>
+            <version>${dep.bouncycastle.version}</version>
         </dependency>
 
         <dependency>
@@ -499,7 +501,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.8.Final</version>
+            <version>${dep.netty.version}</version>
             <scope>test</scope>
         </dependency>
 
