--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>${plugin.exec-maven.version}</version>
                 <configuration>
-                    <mainClass>org.opencypher.caps.Shell</mainClass>
+                    <mainClass>org.opencypher.caps.demo.Shell</mainClass>
                     <classpathScope>test</classpathScope>
                 </configuration>
             </plugin>
@@ -282,7 +282,7 @@
                                     <transformers>
                                         <transformer
                                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                            <mainClass>org.opencypher.caps.Shell</mainClass>
+                                            <mainClass>org.opencypher.caps.demo.Shell</mainClass>
                                         </transformer>
                                     </transformers>
                                     <filters>
