--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
         <!-- Used dependencies -->
         <dep.ammonite.version>1.0.1-6-6d2db3a</dep.ammonite.version>
+        <dep.bouncycastle.version>1.57</dep.bouncycastle.version>
         <dep.cats.version>0.9.0</dep.cats.version>
         <dep.circe.version>0.8.0</dep.circe.version>
         <dep.eff.version>4.5.0</dep.eff.version>
@@ -40,6 +41,8 @@
         <dep.multiset.version>0.4</dep.multiset.version>
         <dep.neo4j-spark-connector>2.0.0-M2</dep.neo4j-spark-connector>
         <dep.neo4j.version>3.2.0-alpha08</dep.neo4j.version>
+        <dep.netty.version>4.1.8.Final</dep.netty.version>
+        <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
         <dep.scalatest.version>3.0.3</dep.scalatest.version>
         <dep.sourcecode.version>0.1.2</dep.sourcecode.version>
         <dep.spark.version>2.2.0</dep.spark.version>
@@ -487,6 +490,27 @@
             <artifactId>neo4j-cypher-frontend-3.2</artifactId>
             <version>${dep.neo4j.version}</version>
             <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.neo4j.test</groupId>
+            <artifactId>neo4j-harness</artifactId>
+            <version>${dep.neo4j.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bctls-jdk15on</artifactId>
+            <version>${dep.bouncycastle.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${dep.netty.version}</version>
             <scope>test</scope>
         </dependency>
 
