Address review comments and re-enabled license plugin

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dep.eff.version>4.5.0</dep.eff.version>
         <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
         <dep.graphframes.version>0.4.0-spark2.1-s_2.11</dep.graphframes.version>
-        <dep.hadoop.version>2.7.2</dep.hadoop.version>
+        <dep.hadoop.version>2.6.5</dep.hadoop.version>
         <dep.junit.version>4.12</dep.junit.version>
         <dep.mockito.version>1.10.19</dep.mockito.version>
         <dep.multiset.version>0.4</dep.multiset.version>
@@ -245,9 +245,22 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <version>${plugin.license-maven.version}</version>
                 <configuration>
-                    <header>license-header</header>
+                    <header>license-header.txt</header>
                     <basedir>src</basedir>
+                    <excludes>
+                        <exclude>test/resources/**</exclude>
+                        <exclude>main/resources/**</exclude>
+                    </excludes>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>check-license-headers</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
