Add basic support for scala doc generation

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
                             <goal>compile</goal>
                         </goals>
                         <phase>process-resources</phase>
+                        <configuration>
+                            <args>
+                                <arg>–explaintypes</arg>
+                                <arg>–optimise</arg>
+                            </args>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>scala-test-compile</id>
@@ -118,6 +124,18 @@
                             <goal>testCompile</goal>
                         </goals>
                         <phase>test-compile</phase>
+                        <configuration>
+                            <args>
+                                <arg>–explaintypes</arg>
+                            </args>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>scala-doc</id>
+                        <goals>
+                            <goal>doc</goal>
+                        </goals>
+                        <phase>prepare-package</phase>
                     </execution>
                 </executions>
                 <configuration>
@@ -125,7 +143,7 @@
                     <scalaVersion>${project.scala.version}</scalaVersion>
                     <scalaCompatVersion>${project.scala.binary.version}</scalaCompatVersion>
                     <encoding>${project.build.encoding}</encoding>
-                    <args>
+                    <args combine.children="append">
                         <!-- need to pass encoding to scalac manually -->
                         <arg>-encoding</arg>
                         <arg>${project.build.encoding}</arg>
@@ -133,23 +151,12 @@
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
                         <arg>-feature</arg>
-                        <arg>–explaintypes</arg>
-                        <arg>–optimise</arg>
                         <arg>-Xfuture</arg>
                         <arg>-Ywarn-adapted-args</arg>
                         <arg>-Yopt-warnings:at-inline-failed</arg>
                         <arg>-Yopt:l:project</arg>
-                        <!-- Enable once available in 2.11.9 or 2.12.x -->
-                        <!-- arg>-Ypartial-unification</arg -->
+                        <arg>-Ypartial-unification</arg>
                     </args>
-                    <compilerPlugins>
-                        <!-- Remove once -Ypartial-unification is available in 2.11.9 or 2.12.x -->
-                        <compilerPlugin>
-                            <groupId>com.milessabin</groupId>
-                            <artifactId>si2712fix-plugin_2.11.8</artifactId>
-                            <version>1.2.0</version>
-                        </compilerPlugin>
-                    </compilerPlugins>
                 </configuration>
             </plugin>
 
@@ -178,6 +185,32 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- scaladoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.2</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>net.alchim31.maven</groupId>
+                            <artifactId>scala-maven-plugin</artifactId>
+                            <version>3.3.1</version>
+                            <configuration>
+                                <jvmArgs>
+                                    <jvmArg>-Xms64m</jvmArg>
+                                    <jvmArg>-Xmx1024m</jvmArg>
+                                </jvmArgs>
+                            </configuration>
+                        </plugin>
+                    </reportPlugins>
+                </configuration>
             </plugin>
 
             <!-- add version information to jar -->
