Add repository for Neo4j snapshots

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,15 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+
+        <repository>
+            <id>Neo4j snapshots</id>
+            <name>Neo4j snapshots repository</name>
+            <url>https://m2.neo4j.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <build>
