Set file encoding for resources
Removes warning about platform-dependent build

--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,9 @@
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>${plugin.maven-resources.version}</version>
+                <configuration>
+                    <encoding>${project.build.encoding}</encoding>
+                </configuration>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
