--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dep.cats.version>0.9.0</dep.cats.version>
         <dep.circe.version>0.8.0</dep.circe.version>
         <dep.eff.version>4.5.0</dep.eff.version>
-        <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
+        <dep.gdl.version>0.3</dep.gdl.version>
         <dep.graphframes.version>0.4.0-spark2.1-s_2.11</dep.graphframes.version>
         <dep.hadoop.version>2.7.0</dep.hadoop.version>
         <dep.junit.version>4.12</dep.junit.version>
@@ -53,19 +53,6 @@
         <repository>
             <id>SparkPackagesRepo</id>
             <url>http://dl.bintray.com/spark-packages/maven</url>
-        </repository>
-
-        <!-- necessary for GDL dependency in tests -->
-        <repository>
-            <id>dbleipzig</id>
-            <name>Database Group Leipzig University</name>
-            <url>https://wdiserv1.informatik.uni-leipzig.de:443/archiva/repository/dbleipzig/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </repository>
 
         <repository>
@@ -506,7 +493,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.s1ck</groupId>
+            <groupId>com.github.s1ck</groupId>
             <artifactId>gdl</artifactId>
             <version>${dep.gdl.version}</version>
         </dependency>
