--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dep.mockito.version>1.10.19</dep.mockito.version>
         <dep.multiset.version>0.4</dep.multiset.version>
         <dep.neo4j-spark-connector>2.0.0-M2</dep.neo4j-spark-connector>
-        <dep.neo4j.version>3.3.0-SNAPSHOT</dep.neo4j.version>
+        <dep.neo4j.version>3.3.0-rc1</dep.neo4j.version>
         <dep.netty.version>4.1.8.Final</dep.netty.version>
         <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
         <dep.scalatest.version>3.0.3</dep.scalatest.version>
