--- a/caps-core/pom.xml
+++ b/caps-core/pom.xml
@@ -15,4 +15,8 @@
 
   <name>Cypher for Apache Spark - Core</name>
 
+  <properties>
+    <project.rootdir>${project.parent.basedir}</project.rootdir>
+  </properties>
+
 </project>
