--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <project.java.version>1.8</project.java.version>
         <project.scala.version>2.11.11</project.scala.version>
         <project.scala.binary.version>2.11</project.scala.binary.version>
+        <project.rootdir>${project.basedir}</project.rootdir>
 
         <!-- Used plugins -->
         <plugin.exec-maven.version>1.4.0</plugin.exec-maven.version>
@@ -180,7 +181,7 @@
                     <inputEncoding>${project.build.encoding}</inputEncoding>
                     <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
                     <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
-                    <configLocation>${basedir}/etc/scalastyle_config.xml</configLocation>
+                    <configLocation>${project.rootdir}/etc/scalastyle_config.xml</configLocation>
                     <outputFile>${basedir}/target/scalastyle-output.xml</outputFile>
                     <outputEncoding>${project.build.encoding}</outputEncoding>
                 </configuration>
