--- a/pom.xml
+++ b/pom.xml
@@ -289,7 +289,7 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <version>${plugin.license-maven.version}</version>
                 <configuration>
-                    <header>license-header.txt</header>
+                    <header>${project.rootdir}/license-header.txt</header>
                     <basedir>${basedir}/src</basedir>
                     <excludes>
                         <exclude>test/resources/**</exclude>
