--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,10 @@
         <dep.circe.version>0.8.0</dep.circe.version>
         <dep.eff.version>4.5.0</dep.eff.version>
         <dep.gdl.version>0.3</dep.gdl.version>
-        <dep.graphframes.version>0.4.0-spark2.1-s_2.11</dep.graphframes.version>
         <dep.hadoop.version>2.7.0</dep.hadoop.version>
         <dep.junit.version>4.12</dep.junit.version>
         <dep.mockito.version>1.10.19</dep.mockito.version>
         <dep.multiset.version>0.4</dep.multiset.version>
-        <dep.neo4j-spark-connector>2.0.0-M2</dep.neo4j-spark-connector>
         <dep.neo4j.version>3.3.0-rc1</dep.neo4j.version>
         <dep.netty.version>4.1.8.Final</dep.netty.version>
         <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
@@ -432,9 +430,9 @@
         </dependency>
 
         <dependency>
-            <groupId>neo4j-contrib</groupId>
-            <artifactId>neo4j-spark-connector</artifactId>
-            <version>${dep.neo4j-spark-connector}</version>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>${dep.neo4j.driver.version}</version>
         </dependency>
 
         <!-- Scala -->
@@ -480,18 +478,6 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-catalyst_2.11</artifactId>
-            <version>${dep.spark.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>graphframes</groupId>
-            <artifactId>graphframes</artifactId>
-            <version>${dep.graphframes.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-graphx_2.11</artifactId>
             <version>${dep.spark.version}</version>
         </dependency>
 
